{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 174,
  "lineage": "6f87deca-665c-ebbe-5486-bcd118585af1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856064652629:internet-gateway/igw-08ade38f98c016dec",
            "id": "igw-08ade38f98c016dec",
            "owner_id": "856064652629",
            "vpc_id": "vpc-0049d6f9bd049d379"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856064652629:route-table/rtb-0f11dfdbe4aa5e8e1",
            "id": "rtb-0f11dfdbe4aa5e8e1",
            "owner_id": "856064652629",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08ade38f98c016dec",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks_vpc_RT"
            },
            "tags_all": {
              "Name": "eks_vpc_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0049d6f9bd049d379"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_public_subnet-1_rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048c09680db0b85d6",
            "route_table_id": "rtb-0f11dfdbe4aa5e8e1",
            "subnet_id": "subnet-0ce9bd98ac055c844"
          },
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_route_table.eks_RT",
            "aws_subnet.eks_public_subnet-1",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_public_subnet-2_rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df5dcb9e911620f4",
            "route_table_id": "rtb-0f11dfdbe4aa5e8e1",
            "subnet_id": "subnet-0aa37cc7524efd09e"
          },
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_route_table.eks_RT",
            "aws_subnet.eks_public_subnet-2",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_public_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856064652629:subnet/subnet-0ce9bd98ac055c844",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce9bd98ac055c844",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "856064652629",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks_public_subnet1"
            },
            "tags_all": {
              "Name": "eks_public_subnet1"
            },
            "vpc_id": "vpc-0049d6f9bd049d379"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_public_subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856064652629:subnet/subnet-0aa37cc7524efd09e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa37cc7524efd09e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "856064652629",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks_public_subnet2"
            },
            "tags_all": {
              "Name": "eks_public_subnet2"
            },
            "vpc_id": "vpc-0049d6f9bd049d379"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856064652629:vpc/vpc-0049d6f9bd049d379",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-023831174fd44862e",
            "default_route_table_id": "rtb-06ccffdd4fe089b64",
            "default_security_group_id": "sg-0d09f09e023eeae1f",
            "dhcp_options_id": "dopt-08ac21a54f488b43d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0049d6f9bd049d379",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06ccffdd4fe089b64",
            "owner_id": "856064652629",
            "tags": {
              "Name": "eks_vpc"
            },
            "tags_all": {
              "Name": "eks_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.sg_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856064652629:security-group/sg-0ea6832ede9e2dcbd",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea6832ede9e2dcbd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access to public",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_node_sg",
            "name_prefix": "",
            "owner_id": "856064652629",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0049d6f9bd049d379"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    }
  ]
}